conf: 🔧 Add pufferfish start flag